# maestri-linux

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  pipe.rs  pty.rs  state.rs
src/lib/canvas/: Canvas.svelte  CanvasGrid.svelte  canvasStore.ts
src/lib/connections/: Connection.svelte  ConnectionLayer.svelte
src/lib/modals/: CreateNodeModal.svelte
src/lib/nodes/: GroupNode.svelte  NodeHeader.svelte  StickyNoteNode.svelte  TerminalNode.svelte  nodesStore.ts
src/lib/terminal/: XtermWrapper.svelte  terminal.ts
src/lib/toolbar/: Toolbar.svelte
