[package]
name = "maestri-linux"
version = "0.1.0"
edition = "2021"

[lib]
name = "maestri_linux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
dirs = "5"
